--- a/binary/pom.xml
+++ b/binary/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>net.ladstatt.logboard</groupId>
         <artifactId>pom</artifactId>
-        <version>2020.3.0-SNAPSHOT</version>
+        <version>${revision}${changelist}</version>
     </parent>
     <artifactId>binary</artifactId>
 
