--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,36 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openjfx.version>16-ea+6</openjfx.version>
         <client.plugin.version>0.1.36</client.plugin.version>
-        <!--
-        <graalvm.home>C:\Program Files\Java\graalvm-ce-java11-21.0.0</graalvm.home>
-        -->
-        <graalvm.home>/Users/lad/.sdkman/candidates/java/21.0.0.r11-grl</graalvm.home>
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.4</scala.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>OS.windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <graalvm.home>C:\Program Files\Java\graalvm-ce-java11-21.0.0</graalvm.home>
+            </properties>
+        </profile>
+        <profile>
+            <id>OS.mac</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Mac OS X</name>
+                </os>
+            </activation>
+            <properties>
+                <graalvm.home>/Users/lad/.sdkman/candidates/java/21.0.0.r11-grl</graalvm.home>
+            </properties>
+        </profile>
+    </profiles>
 
     <modules>
         <module>jfx</module>
