--- a/binary/pom.xml
+++ b/binary/pom.xml
@@ -34,6 +34,24 @@
                 <groupId>com.gluonhq</groupId>
                 <artifactId>client-maven-plugin</artifactId>
                 <version>${client.plugin.version}</version>
+                <configuration>
+                    <target>host</target>
+                    <mainClass>net.ladstatt.logboard.LogboardApp</mainClass>
+                    <verbose>true</verbose>
+                    <graalvmHome>${graalvm.home}</graalvmHome>
+                    <nativeImageArgs>
+                        <arg>--no-fallback</arg>
+                        <arg>-H:-UseServiceLoaderFeature</arg>
+                        <arg>--report-unsupported-elements-at-runtime</arg>
+                        <arg>-Dgraal.LogFile=${project.build.directory}/graal.log</arg>
+                    </nativeImageArgs>
+                    <reflectionList>
+                        <list>net.ladstatt.logboard.LogboardController</list>
+                        <list>javafx.scene.input.Dragboard</list>
+                        <list>javafx.scene.control.Label</list>
+                        <list>javafx.scene.control.ScrollPane</list>
+                    </reflectionList>
+                </configuration>
                 <executions>
                     <execution>
                         <id>execute-compile-and-link</id>
@@ -43,24 +61,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <target>host</target>
-                    <mainClass>net.ladstatt.logboard.LogboardApp</mainClass>
-                    <verbose>true</verbose>
-                    <graalvmHome>${graalvm.home}</graalvmHome>
-                    <reflectionList>
-                        <list>net.ladstatt.logboard.LogboardController</list>
-                        <list>javafx.scene.input.Dragboard</list>
-                        <list>javafx.scene.control.Label</list>
-                        <list>javafx.scene.control.ScrollPane</list>
-                    </reflectionList>
-                    <nativeImageArgs>
-                        <arg>--no-fallback</arg>
-                        <arg>-H:-UseServiceLoaderFeature</arg>
-                        <arg>-Dgraal.LogFile=${project.build.directory}/graal.log</arg>
-                       <!-- <arg>-report-unsupported-elements-at-runtime</arg> -->
-                    </nativeImageArgs>
-                </configuration>
             </plugin>
         </plugins>
     </build>
