--- a/binary/pom.xml
+++ b/binary/pom.xml
@@ -45,11 +45,13 @@
                         <arg>--report-unsupported-elements-at-runtime</arg>
                         <arg>-Dgraal.LogFile=${graalvm.log}</arg>
                     </nativeImageArgs>
-                    <reflectionList>
-                        <list>net.ladstatt.logboard.LogboardController</list>
-                        <list>javafx.scene.input.Dragboard</list>
+                    <!--
+                        <list>net.ladstatt.logboard.LogBoardMainBorderPane</list>
                         <list>javafx.scene.control.Label</list>
                         <list>javafx.scene.control.ScrollPane</list>
+                    -->
+                    <reflectionList>
+                        <list>javafx.scene.input.Dragboard</list>
                     </reflectionList>
                 </configuration>
                 <executions>
