--- a/pom.xml
+++ b/pom.xml
@@ -2,55 +2,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.ladstatt.logboard</groupId>
-    <artifactId>pom</artifactId>
+    <artifactId>javafx-logboard</artifactId>
     <version>${revision}${changelist}</version>
-    <packaging>pom</packaging>
 
-    <name>nxs.ladstatt.logboard</name>
+    <packaging>jar</packaging>
+
+    <name>nxs.ladstatt.logboard.javafx-logboard</name>
 
     <properties>
-        <revision>21.1.2</revision>
+        <revision>21.1.3</revision>
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openjfx.version>16-ea+7</openjfx.version>
-        <client.plugin.version>0.1.36</client.plugin.version>
+        <client.plugin.version>0.1.38</client.plugin.version>
+        <javafx.maven.plugin.version>0.0.5</javafx.maven.plugin.version>
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.4</scala.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <main.class>net.ladstatt.logboard.LogboardApplication</main.class>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>OS.windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <properties>
-                <graalvm.home>C:\Program Files\Java\graalvm-ce-java11-21.0.0</graalvm.home>
-                <graalvm.log>${project.build.directory}\graal.log</graalvm.log>
-            </properties>
-        </profile>
-        <profile>
-            <id>OS.mac</id>
-            <activation>
-                <os>
-                    <family>unix</family>
-                    <name>Mac OS X</name>
-                </os>
-            </activation>
-            <properties>
-                <graalvm.home>/Users/lad/.sdkman/candidates/java/21.0.0.r11-grl</graalvm.home>
-                <graalvm.log>${project.build.directory}/graal.log</graalvm.log>
-            </properties>
-        </profile>
-    </profiles>
-
-    <modules>
-        <module>jfx</module>
-        <module>binary</module>
-    </modules>
 
     <dependencyManagement>
         <dependencies>
@@ -90,9 +60,54 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.major.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.scalacheck</groupId>
+            <artifactId>scalacheck_${scala.major.version}</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>4.4.0</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <scalaVersion>${scala.version}</scalaVersion>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <release>11</release>
+                        <source>9</source>
+                        <target>9</target>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
@@ -195,8 +210,132 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+            </plugin>
+            <!-- to start application from command line and also to support client-maven-plugin's ability -->
+            <!-- to activate a tracing agent via client:runagent -->
+            <!-- see https://docs.oracle.com/en/graalvm/enterprise/19/guide/reference/native-image/tracing-agent.html -->
+            <!-- and https://docs.gluonhq.com/#_clientrunagent -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.maven.plugin.version}</version>
+                <configuration>
+                    <mainClass>${main.class}</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.gluonhq</groupId>
+                <artifactId>client-maven-plugin</artifactId>
+                <version>${client.plugin.version}</version>
+                <configuration>
+                    <target>host</target>
+                    <mainClass>${main.class}</mainClass>
+                    <verbose>true</verbose>
+                    <graalvmHome>${graalvm.home}</graalvmHome>
+                    <nativeImageArgs>
+                        <arg>--no-fallback</arg>
+                        <arg>-H:-UseServiceLoaderFeature</arg>
+                        <arg>--report-unsupported-elements-at-runtime</arg>
+                        <arg>-Dgraal.LogFile=${graalvm.log}</arg>
+                    </nativeImageArgs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>execute-compile-and-link</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>OS.windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <graalvm.home>C:\Program Files\Java\graalvm-ce-java11-21.0.0</graalvm.home>
+                <graalvm.log>${project.build.directory}\graal.log</graalvm.log>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.googlecode.maven-download-plugin</groupId>
+                        <artifactId>download-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>download-upx-packer</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>wget</goal>
+                                </goals>
+                                <configuration>
+                                    <url>https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip</url>
+                                    <unpack>true</unpack>
+                                    <outputDirectory>${project.build.directory}</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>pack-exe</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <workingDirectory>${project.build.directory}/client/x86_64-windows/
+                                    </workingDirectory>
+                                    <executable>${project.build.directory}/upx-3.96-win64/upx.exe</executable>
+                                    <arguments>
+                                        <argument>-9</argument>
+                                        <argument>-ojavafx-logboard.exe</argument>
+                                        <argument>net.ladstatt.logboard.binary.exe</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>OS.mac</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Mac OS X</name>
+                </os>
+            </activation>
+            <properties>
+                <graalvm.home>/Users/lad/.sdkman/candidates/java/21.0.0.r11-grl</graalvm.home>
+                <graalvm.log>${project.build.directory}/graal.log</graalvm.log>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
 
 
