--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <packaging>jar</packaging>
 
-    <name>nxs.ladstatt.logboard.javafx-logboard</name>
+    <name>net.ladstatt.logboard.javafx-logboard</name>
 
     <properties>
         <revision>21.1.3</revision>
@@ -321,7 +321,7 @@
                                     <arguments>
                                         <argument>-9</argument>
                                         <argument>-ojavafx-logboard.exe</argument>
-                                        <argument>net.ladstatt.logboard.binary.exe</argument>
+                                        <argument>${project.name}.exe</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
