--- a/src/main/native-image/win/resource-config.json
+++ b/src/main/native-image/win/resource-config.json
@@ -1,6 +1,6 @@
 {
   "resources":{
-  "includes":[]},
+  "includes":[{"pattern":"\\Qnet/ladstatt/logboard/save-as.png\\E"}]},
   "bundles":[
     {"name":"com.sun.javafx.tk.quantum.QuantumMessagesBundle"}, 
     {"name":"com/sun/javafx/scene/control/skin/resources/controls"}
