--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <revision>21.1.3</revision>
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <openjfx.version>16-ea+7</openjfx.version>
+        <openjfx.version>16</openjfx.version>
         <client.plugin.version>0.1.38</client.plugin.version>
         <javafx.maven.plugin.version>0.0.5</javafx.maven.plugin.version>
         <scala.major.version>2.13</scala.major.version>
