--- a/src/main/native-image/mac/reflect-config.json
+++ b/src/main/native-image/mac/reflect-config.json
@@ -198,14 +198,14 @@
   "name":"javafx.stage.Window"
 },
 {
-  "name":"net.ladstatt.logboard.LogboardApp",
+  "name":"net.ladstatt.logorrr.LogoRRRApp",
   "methods":[
     {"name":"<init>","parameterTypes":[] }, 
     {"name":"main","parameterTypes":["java.lang.String[]"] }
   ]
 },
 {
-  "name":"net.ladstatt.logboard.LogboardApp",
+  "name":"net.ladstatt.logorrr.LogoRRRApp",
   "methods":[{"name":"<init>","parameterTypes":[] }]
 },
 {
