--- a/src/main/native-image/mac/jni-config.json
+++ b/src/main/native-image/mac/jni-config.json
@@ -137,6 +137,10 @@
   "name":"java.lang.String[][]"
 },
 {
+  "name":"java.lang.System",
+  "methods":[{"name":"getProperty","parameterTypes":["java.lang.String"] }]
+},
+{
   "name":"java.util.List",
   "methods":[{"name":"add","parameterTypes":["java.lang.Object"] }]
 },
