moves all relevant files to new package hierarchy 'app.logorrr'

--- a/src/main/native-image/mac/reflect-config.json
+++ b/src/main/native-image/mac/reflect-config.json
@@ -198,7 +198,7 @@
   "name":"javafx.stage.Window"
 },
 {
-  "name":"net.ladstatt.logorrr.LogoRRRApp",
+  "name":"app.logorrr.LogoRRRApp",
   "methods":[
     {"name":"<init>","parameterTypes":[] }, 
     {"name":"main","parameterTypes":["java.lang.String[]"] }
