--- a/src/main/resources/app/logorrr/logging.properties
+++ b/src/main/resources/app/logorrr/logging.properties
@@ -1,7 +1,7 @@
 
 handlers=java.util.logging.ConsoleHandler
 .level=OFF
-net.ladstatt.level=ALL
+app.logorrr.level=ALL
 java.util.logging.ConsoleHandler.level=ALL
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format = [%1$tF %1$tT.%1$tN] %3$-50s %4$-13s %5$s %6$s %n
