--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.ladstatt</groupId>
+    <groupId>app.logorrr</groupId>
     <artifactId>logorrr</artifactId>
     <version>${revision}${changelist}</version>
     <packaging>jar</packaging>
-    <name>net.ladstatt.logorrr</name>
+    <name>app.logorrr</name>
     <properties>
         <revision>21.2.3</revision>
         <changelist>-SNAPSHOT</changelist>
@@ -16,7 +16,7 @@
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.5</scala.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <main.class>net.ladstatt.logorrr.LogoRRRApp</main.class>
+        <main.class>app.logorrr.LogoRRRApp</main.class>
     </properties>
     <dependencyManagement>
         <dependencies>
