--- a/src/main/native-image/win/reflect-config.json
+++ b/src/main/native-image/win/reflect-config.json
@@ -187,7 +187,7 @@
   "name":"javafx.stage.Window"
 },
 {
-  "name":"net.ladstatt.logorrr.LogoRRRApp",
+  "name":"app.logorrr.LogoRRRApp",
   "methods":[
     {"name":"<init>","parameterTypes":[] }, 
     {"name":"main","parameterTypes":["java.lang.String[]"] }
