--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
         <revision>21.2.3</revision>
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <openjfx.version>16</openjfx.version>
+        <openjfx.version>17-ea+7</openjfx.version>
+        <!-- <openjfx.version>16</openjfx.version -->
         <client.plugin.version>0.1.38</client.plugin.version>
         <javafx.maven.plugin.version>0.0.5</javafx.maven.plugin.version>
         <scala.major.version>2.13</scala.major.version>
@@ -28,6 +29,11 @@
             <dependency>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-controls</artifactId>
+                <version>${openjfx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-swing</artifactId>
                 <version>${openjfx.version}</version>
             </dependency>
             <dependency>
@@ -67,6 +73,10 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
